--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<meta name="google-site-verification" content="Pu4Y4w6HzcqAJPEx4BcREHctTd4s8c_kio6EUbAh7cc" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CM's Collection</title>
