--- a/index.html
+++ b/index.html
@@ -19,40 +19,61 @@
 		<div class="game-grid">
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzI4ODA0MDMucG5n/315x250%23c/puRpms.png" alt="Cryptid Farm">
-        <br>
-				<a href="https://html-classic.itch.zone/html/9685435/cryptid%20farm%20108%20beta%20demo%20anniversary%202/index.html">Cryptid Farm</a>
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/9685435/cryptid%20farm%20108%20beta%20demo%20anniversary%202/index.html')">Cryptid Farm</span>
 			</div>
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1hZ2UvNDczNjcvMjA1ODcxLnBuZw==/315x250%23c/NsZPxC.png" alt="Sort the Court">
-        <br>
-				<a href="https://html-classic.itch.zone/html/347310/index.html?v=1542780889">Sort the Court</a>
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/347310/index.html?v=1542780889')">Sort the Court</span>
 			</div>
-	<div class="game-container">
-		<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
-		<br>
-		<a href="https://html-classic.itch.zone/html/8990635/index.html">PolyTrack</a>
-	</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzU3OTM0OTYuZ2lm/315x250%23cm/Gf7Jrg.gif" alt="Deepest Sword">
-	<br>
-	<a href="https://html-classic.itch.zone/html/4017918/index.html">Deepest Sword</a>
-</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1hZ2UvOTEyMDEvNjExNTExLnBuZw==/315x250%23c/IG4SJI.png" alt="Evolution">
-	<br>
-	<a href="https://html-classic.itch.zone/html/438808-627293/Evolution/index.html">Evolution</a>
-</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1hZ2UvMjUwODk1LzExOTkyNzcuanBn/315x250%23c/tM95IA.jpg" alt="Roulette Knight">
-	<br>
-	<a href="https://html-classic.itch.zone/html/890491/index.html?v=1542781941">Roulette Knight</a>
-</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzU3OTM0OTYuZ2lm/315x250%23cm/Gf7Jrg.gif" alt="Deepest Sword">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/4017918/index.html')">Deepest Sword</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1hZ2UvOTEyMDEvNjExNTExLnBuZw==/315x250%23c/IG4SJI.png" alt="Evolution">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/438808-627293/Evolution/index.html')">Evolution</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1hZ2UvMjUwODk1LzExOTkyNzcuanBn/315x250%23c/tM95IA.jpg" alt="Roulette Knight">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/890491/index.html?v=1542781941')">Roulette Knight</span>
+			</div>
 			<!-- Add more game containers as needed -->
 		</div>
 	</main>
 	<footer>
 		<!-- Footer content -->
 	</footer>
+
+	<script>
+		function createIframe(url) {
+            // Clear existing content
+            document.body.innerHTML = '';
+
+            // Create an iframe element
+            var iframe = document.createElement('iframe');
+            iframe.src = url;
+            iframe.style.position = "absolute";
+            iframe.style.width = '100%';
+            iframe.style.height = '100%';
+            iframe.style.border = 'none';
+            iframe.style.top = "0";
+            iframe.style.left = "0";
+            iframe.style.overflow = "hidden";
+
+            // Append the iframe to the body
+            document.body.appendChild(iframe);
+        }
+	</script>
 </body>
 
 </html>
