--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 				<br>
 				<span onclick="createIframe('https://html-classic.itch.zone/html/890491/index.html?v=1542781941')">Roulette Knight</span>
 			</div>
-			<!-- Add more game containers as needed -->
+	<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQyNjY1OTEucG5n/315x250%23c/Iz1wWA.png" alt="Enchain">
+		<br>
+		<span onclick="createIframe('https://html-classic.itch.zone/html/793359/Enchain%20WebGL/index.html?v=1542781876')">Enchain</span>
+	</div>
 		</div>
 	</main>
 	<footer>
