--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
 		<br>
 		<span onclick="createIframe('https://html-classic.itch.zone/html/793359/Enchain%20WebGL/index.html?v=1542781876')">Enchain</span>
 	</div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE1MzcyNjM4LmdpZg==/315x250%23cm/2YjHzF.gif" alt="Redline Express">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9929242/Redline Express (Webgl)/index.html')">Redline Express</span>
+</div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzk2ODA5MDAucG5n/315x250%23c/NxJKs9.png" alt="NEW Baldi's Basics">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9131604/index.html')">NEW Baldi's Basics</span>
+</div>
+
+
+
 		</div>
 	</main>
 	<footer>
