--- a/index.html
+++ b/index.html
@@ -61,6 +61,26 @@
 	<br>
 	<span onclick="createIframe('https://html-classic.itch.zone/html/9131604/index.html')">NEW Baldi's Basics</span>
 </div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzExOTY5NTkwLnBuZw==/315x250%23c/2lQBl5.png" alt="Dungeon Blackjack">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9617454/index.html')">Dungeon Blackjack</span>
+</div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzQ0MTcxMDAucG5n/315x250%23c/yLDfwE.png" alt="High Stakes">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3016623/index.html')">High Stakes</span>
+</div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzMwODE4MDkuZ2lm/315x250%23cm/MGdz2N.gif" alt="Sonic Revert">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3962593/index.html')">Sonic Revert</span>
+</div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzE0NDg5ODAwLnBuZw==/315x250%23c/yE0lgB.png" alt="Sandtrix">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/8194123/index.html')">Sandtrix</span>
+</div>
 
 
 
