--- a/index.html
+++ b/index.html
@@ -47,35 +47,68 @@
 				<br>
 				<span onclick="createIframe('https://html-classic.itch.zone/html/890491/index.html?v=1542781941')">Roulette Knight</span>
 			</div>
-	<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQyNjY1OTEucG5n/315x250%23c/Iz1wWA.png" alt="Enchain">
-		<br>
-		<span onclick="createIframe('https://html-classic.itch.zone/html/793359/Enchain%20WebGL/index.html?v=1542781876')">Enchain</span>
-	</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzE1MzcyNjM4LmdpZg==/315x250%23cm/2YjHzF.gif" alt="Redline Express">
+			<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQyNjY1OTEucG5n/315x250%23c/Iz1wWA.png" alt="Enchain">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/793359/Enchain%20WebGL/index.html?v=1542781876')">Enchain</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzE1MzcyNjM4LmdpZg==/315x250%23cm/2YjHzF.gif" alt="Redline Express">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/9929242/Redline Express (Webgl)/index.html')">Redline Express</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzk2ODA5MDAucG5n/315x250%23c/NxJKs9.png" alt="NEW Baldi's Basics">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/9131604/index.html')">NEW Baldi's Basics</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzExOTY5NTkwLnBuZw==/315x250%23c/2lQBl5.png" alt="Dungeon Blackjack">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/9617454/index.html')">Dungeon Blackjack</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzQ0MTcxMDAucG5n/315x250%23c/yLDfwE.png" alt="High Stakes">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/3016623/index.html')">High Stakes</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzMwODE4MDkuZ2lm/315x250%23cm/MGdz2N.gif" alt="Sonic Revert">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/3962593/index.html')">Sonic Revert</span>
+			</div>
+<div class="game-container"> <img src="https://img.itch.zone/aW1nLzg0NDE3ODcucG5n/315x250%23c/0Xl%2FEJ.png" alt="Mario Vs. Luigi">
 	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/9929242/Redline Express (Webgl)/index.html')">Redline Express</span>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/6492922/MarioVsLuigi-WebGL/index.html')">Mario Vs. Luigi</span>
+</div>
+<div class="game-container"> <img src="https://img.itch.zone/aW1nLzU0MjU2NzEuZ2lm/315x250%23cm/h4e2F%2B.gif" alt="Red Handed">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3872485/Red Handed v1.1 (WEBGL)/index.html')">Red Handed</span>
+</div>
+<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQ0NjA1MDUucG5n/315x250%23c/%2F9ypZ7.png" alt="POOM">
+	<br> <span onclick="createIframe('https://html-classic.itch.zone/html/7204900/index.html')">POOM</span> </div>
+<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQzNDI2NzgucG5n/315x250%23c/xnuBwz.png" alt="Dreader">
+	<br> <span onclick="createIframe('https://html-classic.itch.zone/html/3704931/index.html')">Dreader</span> </div>
+<div class="game-container">
+	<img src="https://img.itch.zone/aW1nLzM0MzYxNTUucG5n/315x250%23c/dFcc0%2B.png" alt="PICOHOT">
+	<br>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/4274784/picohot_html/index.html')">PICOHOT</span>
 </div>
 <div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzk2ODA5MDAucG5n/315x250%23c/NxJKs9.png" alt="NEW Baldi's Basics">
+	<img src="https://img.itch.zone/aW1nLzQ1NjEwNDYuZ2lm/315x250%23cm/S3N60I.gif" alt="Gun Knight">
 	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/9131604/index.html')">NEW Baldi's Basics</span>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3524996/index.html')">Gun Knight</span>
 </div>
 <div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzExOTY5NTkwLnBuZw==/315x250%23c/2lQBl5.png" alt="Dungeon Blackjack">
+	<img src="https://img.itch.zone/aW1nLzMxNDA5NjUucG5n/315x250%23c/LMBBxo.png" alt="Electric Trains">
 	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/9617454/index.html')">Dungeon Blackjack</span>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/9405759/index.html')">Electric Trains</span>
 </div>
 <div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzQ0MTcxMDAucG5n/315x250%23c/yLDfwE.png" alt="High Stakes">
+	<img src="https://img.itch.zone/aW1hZ2UvMjM2ODQ1LzExMjY3MjUuZ2lm/315x250%23cm/LGfox0.gif" alt="Slipways">
 	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/3016623/index.html')">High Stakes</span>
+	<span onclick="createIframe('https://html-classic.itch.zone/html/3076366/index.html')">Slipways</span>
 </div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzMwODE4MDkuZ2lm/315x250%23cm/MGdz2N.gif" alt="Sonic Revert">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/3962593/index.html')">Sonic Revert</span>
-</div>
+
 
 
 
