--- a/index.html
+++ b/index.html
@@ -76,38 +76,41 @@
 				<br>
 				<span onclick="createIframe('https://html-classic.itch.zone/html/3962593/index.html')">Sonic Revert</span>
 			</div>
-<div class="game-container"> <img src="https://img.itch.zone/aW1nLzg0NDE3ODcucG5n/315x250%23c/0Xl%2FEJ.png" alt="Mario Vs. Luigi">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/6492922/MarioVsLuigi-WebGL/index.html')">Mario Vs. Luigi</span>
-</div>
-<div class="game-container"> <img src="https://img.itch.zone/aW1nLzU0MjU2NzEuZ2lm/315x250%23cm/h4e2F%2B.gif" alt="Red Handed">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/3872485/Red Handed v1.1 (WEBGL)/index.html')">Red Handed</span>
-</div>
-<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQ0NjA1MDUucG5n/315x250%23c/%2F9ypZ7.png" alt="POOM">
-	<br> <span onclick="createIframe('https://html-classic.itch.zone/html/7204900/index.html')">POOM</span> </div>
-<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQzNDI2NzgucG5n/315x250%23c/xnuBwz.png" alt="Dreader">
-	<br> <span onclick="createIframe('https://html-classic.itch.zone/html/3704931/index.html')">Dreader</span> </div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzM0MzYxNTUucG5n/315x250%23c/dFcc0%2B.png" alt="PICOHOT">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/4274784/picohot_html/index.html')">PICOHOT</span>
-</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzQ1NjEwNDYuZ2lm/315x250%23cm/S3N60I.gif" alt="Gun Knight">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/3524996/index.html')">Gun Knight</span>
-</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzMxNDA5NjUucG5n/315x250%23c/LMBBxo.png" alt="Electric Trains">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/9405759/index.html')">Electric Trains</span>
-</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1hZ2UvMjM2ODQ1LzExMjY3MjUuZ2lm/315x250%23cm/LGfox0.gif" alt="Slipways">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/3076366/index.html')">Slipways</span>
-</div>
+			<div class="game-container"> <img src="https://img.itch.zone/aW1nLzg0NDE3ODcucG5n/315x250%23c/0Xl%2FEJ.png" alt="Mario Vs. Luigi">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/6492922/MarioVsLuigi-WebGL/index.html')">Mario Vs. Luigi</span>
+			</div>
+			<div class="game-container"> <img src="https://img.itch.zone/aW1nLzU0MjU2NzEuZ2lm/315x250%23cm/h4e2F%2B.gif" alt="Red Handed">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/3872485/Red Handed v1.1 (WEBGL)/index.html')">Red Handed</span>
+			</div>
+			<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQ0NjA1MDUucG5n/315x250%23c/%2F9ypZ7.png" alt="POOM">
+				<br> <span onclick="createIframe('https://html-classic.itch.zone/html/7204900/index.html')">POOM</span>
+			</div>
+			<div class="game-container"> <img src="https://img.itch.zone/aW1nLzQzNDI2NzgucG5n/315x250%23c/xnuBwz.png" alt="Dreader">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/3704931/index.html')">Dreader</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzM0MzYxNTUucG5n/315x250%23c/dFcc0%2B.png" alt="PICOHOT">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/4274784/picohot_html/index.html')">PICOHOT</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzQ1NjEwNDYuZ2lm/315x250%23cm/S3N60I.gif" alt="Gun Knight">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/3524996/index.html')">Gun Knight</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzMxNDA5NjUucG5n/315x250%23c/LMBBxo.png" alt="Electric Trains">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/9405759/index.html')">Electric Trains</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1hZ2UvMjM2ODQ1LzExMjY3MjUuZ2lm/315x250%23cm/LGfox0.gif" alt="Slipways">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/3076366/index.html')">Slipways</span>
+			</div>
 
 
 
@@ -115,11 +118,11 @@
 		</div>
 	</main>
 	<footer>
-		<!-- Footer content -->
+		<input type="text" id="search" placeholder="Search for a game...">
 	</footer>
 
-	<script>
-		function createIframe(url) {
+		<script>
+			function createIframe(url) {
             // Clear existing content
             document.body.innerHTML = '';
 
@@ -137,7 +140,20 @@
             // Append the iframe to the body
             document.body.appendChild(iframe);
         }
-	</script>
+document.querySelector("#search").onkeyup = search;
+
+function search() {
+var games = document.querySelectorAll(".game-container");
+games.forEach((game) => {
+    var firstSpan = game.querySelector('span');
+    if (firstSpan && firstSpan.innerHTML.toLowerCase().includes(document.querySelector("#search").value.toLowerCase())) {
+      game.style.display = "block";
+    } else {
+      game.style.display = "none";
+    }
+  });
+}
+		</script>
 </body>
 
 </html>
