--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 		</nav>
 	</header>
 	<section class="featured-section">
-		<div class="headerBack"><h3>Featured</h3></div>
+		<div class="headerBack">
+			<h3>Featured</h3>
+		</div>
 		<div class="featured-container">
-      <div class="feat-button left" onclick="scrollE(-1)">&lt;</div>
+			<div class="feat-button left" onclick="scrollE(-1)">&lt;</div>
 			<div class="featured-game">
 				<div class="game-container">
 					<img id="ftimg" src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
@@ -26,7 +28,7 @@
 					<span id="ftspan" onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
 				</div>
 			</div>
-		<div class="feat-button right" onclick="scrollE(1)">&gt;</div>
+			<div class="feat-button right" onclick="scrollE(1)">&gt;</div>
 		</div>
 	</section>
 	<main>
@@ -105,11 +107,11 @@
 				<br>
 				<span onclick="createIframe('https://html-classic.itch.zone/html/4274784/picohot_html/index.html')">PICOHOT</span>
 			</div>
-				<div id='ft1' class="game-container">
-					<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
-					<br>
-					<span onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
-				</div>
+			<div id='ft1' class="game-container">
+				<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
+			</div>
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzQ1NjEwNDYuZ2lm/315x250%23cm/S3N60I.gif" alt="Gun Knight">
 				<br>
@@ -127,16 +129,16 @@
 			</div>
 			<div id="footerSpacing"></div>
 		</div>
-	<br>
-	<div style="height:50px;"></div>
-	<br>
+		<br>
+		<div style="height:50px;"></div>
+		<br>
 	</main>
-	<footer>
-		<input type="text" id="search" placeholder="Search for a game...">
+		<footer>
+			<input type="text" id="search" placeholder="Search for a game...">
 	</footer>
 
-		<script>
-			function createIframe(url) {
+			<script>
+				function createIframe(url) {
             // Clear existing content
             document.body.innerHTML = '';
 
@@ -203,7 +205,7 @@ if(feat > fts.length-1) {
 feat = 0;
 }
 if(feat < 0) { feat=fts.length-1; } changeFt(fts[feat]); }
-		</script>
+			</script>
 </body>
 
 </html>
