--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@ if(feat < 0) { feat=fts.length-1; } changeFt(fts[feat]); }
         // Add event listener for mouse movement
         document.addEventListener('mousemove', scaleCircles);
 			</script>
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEL6CNPNYP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PEL6CNPNYP');
+</script>
 </body>
 
 </html>
