--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   gtag('config', 'G-PEL6CNPNYP');
 </script>
+	<meta name="google-adsense-account" content="ca-pub-7959159977743747">
 	<meta name="google-site-verification" content="Pu4Y4w6HzcqAJPEx4BcREHctTd4s8c_kio6EUbAh7cc" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
