--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ var watermark = document.createElement("span");
 watermark.style.fontSize = "65px";
 watermark.style.color = "rgba(231, 150, 150, 0.3)";
 watermark.style.fontWeight = "bold";
-watermark.style.position = "absolute";
+watermark.style.position = "fixed";
 watermark.style.zIndex = 999999;
 watermark.style.top = "0";
 watermark.style.left = "0";
