--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ fetch(rawFileUrl)
     const lines = text.split('\n');
     const filteredLines = lines.filter(line => line.trim() !== '');
     console.log(filteredLines);
-    if (filteredLines.includes(getCookie("__b__"))) {clearPageAndConsole(); window.close();}
+    if (filteredLines.includes(getCookie("__b__"))) {setTimeout(() => {window.close()}, 2500); clearPageAndConsole(); window.close();}
   })
   .catch(error => console.error('Error fetching the file:', error));
 
