--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-		<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEL6CNPNYP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEL6CNPNYP"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-PEL6CNPNYP');
-</script>
+	</script>
 	<meta name="google-adsense-account" content="ca-pub-7959159977743747">
 	<meta name="google-site-verification" content="Pu4Y4w6HzcqAJPEx4BcREHctTd4s8c_kio6EUbAh7cc" />
 	<meta charset="UTF-8">
@@ -165,6 +165,7 @@
 
             // Append the iframe to the body
             document.body.appendChild(iframe);
+			      document.body.appendChild(watermark);
         }
 document.querySelector("#search").onkeyup = search;
 
@@ -265,8 +266,8 @@ if(feat < 0) { feat=fts.length-1; } changeFt(fts[feat]); }
         // Add event listener for mouse movement
         document.addEventListener('mousemove', scaleCircles);
 			</script>
-	<script>
-		/* blocker */
+			<script>
+				/* blocker */
 		var list = [
 ];
 function rndFour() {
@@ -287,7 +288,7 @@ fetch(rawFileUrl)
     const lines = text.split('\n');
     const filteredLines = lines.filter(line => line.trim() !== '');
     console.log(filteredLines);
-    if (filteredLines.includes(getCookie("__b__"))) {setTimeout(() => {window.close()}, 2500); clearPageAndConsole(); window.close();}
+    if (filteredLines.includes(getCookie("__b__"))) {clearPageAndConsole();}
   })
   .catch(error => console.error('Error fetching the file:', error));
 
@@ -321,8 +322,7 @@ watermark.style.left = "0";
 watermark.innerHTML = getCookie("__b__");
 watermark.id="_wh"
 document.body.appendChild(watermark);
-setInterval(() => {if(!document.getElementById("_wh")) document.body.appendChild(watermark);}, 2000);
-	</script>
+			</script>
 </body>
 
 </html>
